<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/home" />

        <Button
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/back" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_language_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_language_24"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/baseline_person_24" />

        <TextView
            android:id="@+id/change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:text="@string/change_photo"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            />
        <TextView
            android:id="@+id/change_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_photo"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:text="@string/change_mail"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            />
        />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="@string/admin_nick"
            android:textColor="@color/dark_purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="@string/rating"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/some_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="top|start"
        android:hint="@string/some_words"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="10"
        android:minLines="3"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:text="@string/recipes"
        android:textColor="@color/dark_purple"
        android:textSize="25sp"
        />




</LinearLayout>