<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button

            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/home" />

        <Button
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/back" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="124dp"

        android:padding="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/design_default_color_surface" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="Admin Nick"
            android:textColor="@color/dark_purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="Status"
            android:textColor="@color/blue"
            android:textSize="20sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white2"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/chat_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/type_mes"
            android:padding="12dp" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_purple"
            android:padding="12dp"
            android:src="@android:drawable/arrow_down_float"
            app:tint="@color/white" />

    </LinearLayout>



</LinearLayout>